updated example config -- added scan_paths

--- a/config.yml.example
+++ b/config.yml.example
@@ -4,4 +4,7 @@ users:
 
   - username: testuser2
     password: testpassword2
-    
+
+scan_paths:
+  - /home/testuser/public_html
+  - /var/www/html
