--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/spyc"]
 	path = vendor/spyc
 	url = https://github.com/mustangostang/spyc.git
+[submodule "vendor/angular-smart-truncate"]
+	path = vendor/angular-smart-truncate
+	url = https://github.com/500tech/angular-smart-truncate.git
